examples/typechecking/completeness_checking.an
main () =
    match Maybe.None
    | None -> 1

    match (2, Maybe.None)
    | (0, None) -> ()
    | (_, Some _) -> ()

    // This one is complete!
    match Maybe.None
    | Some (Maybe.Some _) -> 0
    | Some _ -> 1
    | None -> 2

    // Redundant patterns
    match (1, 2)
    | 1, _ -> 0
    | 1, 2 -> 1
    | _, 2 -> 2
    
    match (true, true)
    | (false, true) -> 0
    | (true, false) -> 1

    match (1, 2, 3, 4)
    | (1, 2) -> 1
    | (_, _, _, _) -> 3

    ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (main: fn Unit -> Unit) () =
//     (match_var27: (error)) = (Maybe.None: Maybe _)
//     switch (match_var27: Maybe _)
//     | 0 -> 1
//     | 1, (match_var28: _) -> #missing_case
//     (match_var29: (error)) = 2 (,: fn I32 (Maybe _) -> I32, (Maybe _)) (Maybe.None: Maybe _)
//     switch (match_var29: I32, (Maybe _))
//     | 0, (match_var30: I32), (match_var31: Maybe _) -> switch (match_var31: Maybe _)
//         | 0 -> switch (match_var30: I32)
//             | 0 -> ()
//             | _ -> #missing_case
//         | 1, (match_var32: _) -> 
//                 (_: _) = (match_var32: _)
//                 
//                     (_: I32) = (match_var30: I32)
//                     ()
//     (match_var33: (error)) = (Maybe.None: Maybe (Maybe _))
//     switch (match_var33: Maybe (Maybe _))
//     | 0 -> 2
//     | 1, (match_var34: Maybe _) -> switch (match_var34: Maybe _)
//         | 0 -> 
//                 (_: Maybe _) = (match_var34: Maybe _)
//                 1
//         | 1, (match_var35: _) -> 
//                 (_: _) = (match_var35: _)
//                 0
//     (match_var36: (error)) = 1 (,: fn I32 I32 -> I32, I32) 2
//     switch (match_var36: I32, I32)
//     | 0, (match_var37: I32), (match_var38: I32) -> switch (match_var37: I32)
//         | 1 -> 
//                 (_: I32) = (match_var38: I32)
//                 0
//         | _ -> switch (match_var38: I32)
//             | 2 -> 
//                     (_: I32) = (match_var37: I32)
//                     2
//             | _ -> #missing_case
//     (match_var39: (error)) = true (,: fn Bool Bool -> Bool, Bool) true
//     switch (match_var39: Bool, Bool)
//     | 0, (match_var40: Bool), (match_var41: Bool) -> switch (match_var41: Bool)
//         | false -> switch (match_var40: Bool)
//             | false -> #missing_case
//             | true -> 1
//         | true -> switch (match_var40: Bool)
//             | false -> 0
//             | true -> #missing_case
//     (match_var42: (error)) = 1 (,: fn ((_, _), _) (I32, (I32, I32)) -> ((_, _), _), (I32, (I32, I32))) (2 (,: fn I32 (I32, I32) -> I32, (I32, I32)) (3 (,: fn I32 I32 -> I32, I32) 4))
//     switch (match_var42: ((_, _), _), (I32, (I32, I32)))
//     | 0, (match_var43: (_, _), _), (match_var44: I32, (I32, I32)) -> switch (match_var43: (_, _), _)
//         | 0, (match_var45: _, _), (match_var46: _) -> switch (match_var44: I32, (I32, I32))
//             | 0, (match_var47: I32), (match_var48: I32, I32) -> 1
//     ()

// expected stderr:
// examples/typechecking/completeness_checking.an:2:11
// 1 | main () =
// 2 |     match Maybe.None	// error: Missing case: Some _
//   |           ^^^^^^^^^^
// 3 |     | None -> 1
// 
// examples/typechecking/completeness_checking.an:5:12
// 5 |     match (2, Maybe.None)	// error: Missing case: _, None
//   |            ^^^^^^^^^^^^^
// 6 |     | (0, None) -> ()
// 
// examples/typechecking/completeness_checking.an:16:12
// 15 |     // Redundant patterns
// 16 |     match (1, 2)	// error: Missing case: _, _
//    |            ^^^^
// 17 |     | 1, _ -> 0
// 
// examples/typechecking/completeness_checking.an:18:7
// 17 |     | 1, _ -> 0
// 18 |     | 1, 2 -> 1	// warning: This case is already matched by prior patterns
//    |       ^^^^
// 19 |     | _, 2 -> 2
// 
// examples/typechecking/completeness_checking.an:21:12
// 20 |     
// 21 |     match (true, true)	// error: Missing cases: false, false, true, true
//    |            ^^^^^^^^^^
// 22 |     | (false, true) -> 0
// 
// examples/typechecking/completeness_checking.an:25:12
// 25 |     match (1, 2, 3, 4)	// error: Expected an integer type but found (_, _), _
//    |            ^
// 26 |     | (1, 2) -> 1
// 
// examples/typechecking/completeness_checking.an:26:8
// 25 |     match (1, 2, 3, 4)
// 26 |     | (1, 2) -> 1	// error: Expected an integer type but found (_, _), _
//    |        ^
// 27 |     | (_, _, _, _) -> 3
// 
// examples/typechecking/completeness_checking.an:26:11
// 25 |     match (1, 2, 3, 4)
// 26 |     | (1, 2) -> 1	// error: Expected an integer type but found I32, (I32, I32)
//    |           ^
// 27 |     | (_, _, _, _) -> 3
// 
// examples/typechecking/completeness_checking.an:27:7
// 26 |     | (1, 2) -> 1
// 27 |     | (_, _, _, _) -> 3	// warning: This case is already matched by prior patterns
//    |       ^^^^^^^^^^^^
// 
// Found 7 errors and 2 warnings
